test/should_fail/TestReservedMethod1.oj

@implementation TestReservedMethod

- (void) isSubclassOfClass:(id)unused { }

@end
